--- a/Project_Soccer.qmd
+++ b/Project_Soccer.qmd
@@ -4,3 +4,111 @@ author: "Namit Shrivastava"
 format: pdf
 editor: visual
 ---
+
+## Data Collection
+
+```{r}
+library(RedditExtractoR)
+library(worldfootballR)
+library(tidyverse)
+library(httr)
+library(jsonlite)
+
+# 1: Collecting data from multiple sources
+# =========================================
+
+# 1.1 Now let me collect player data from fbref.com using worldfootballR
+# Getting data from the 2019-2020, 2020-2021, 2021-2022, and 2022-2023 seasons
+player_seasons <- c("2019-2020", "2020-2021", "2021-2022", "2022-2023")
+
+# Initialize empty data frames for each type of statistics
+player_standard_stats <- data.frame()
+player_shooting_stats <- data.frame()
+player_passing_stats <- data.frame()
+player_defensive_stats <- data.frame()
+player_possession_stats <- data.frame()
+
+# Looping through seasons to collect data
+for (season in player_seasons) {
+  cat("Collecting data for season:", season, "\n")
+  season_end_year <- as.numeric(substr(season, 6, 9))
+  
+  # Check the available functions and parameters
+  help(fb_big5_advanced_season_stats)
+  
+  # Modified approach to collect data from Premier League only
+  # First get all big 5 leagues data, then filter for Premier League
+  
+  # Collect standard statistics
+  cat("Collecting standard statistics...\n")
+  temp_standard <- fb_big5_advanced_season_stats(season_end_year = season_end_year,
+                                               stat_type = "standard",
+                                               team_or_player = "player")
+  temp_standard <- temp_standard %>% filter(grepl("Premier League", Comp))
+  player_standard_stats <- bind_rows(player_standard_stats, temp_standard)
+  Sys.sleep(2)
+  
+  # Collect shooting statistics
+  cat("Collecting shooting statistics...\n")
+  temp_shooting <- fb_big5_advanced_season_stats(season_end_year = season_end_year,
+                                               stat_type = "shooting",
+                                               team_or_player = "player")
+  temp_shooting <- temp_shooting %>% filter(grepl("Premier League", Comp))
+  player_shooting_stats <- bind_rows(player_shooting_stats, temp_shooting)
+  Sys.sleep(2)
+  
+  # Collect passing statistics
+  cat("Collecting passing statistics...\n")
+  temp_passing <- fb_big5_advanced_season_stats(season_end_year = season_end_year,
+                                              stat_type = "passing",
+                                              team_or_player = "player")
+  temp_passing <- temp_passing %>% filter(grepl("Premier League", Comp))
+  player_passing_stats <- bind_rows(player_passing_stats, temp_passing)
+  Sys.sleep(2)
+  
+  # Collect defensive statistics
+  cat("Collecting defensive statistics...\n")
+  temp_defensive <- fb_big5_advanced_season_stats(season_end_year = season_end_year,
+                                                stat_type = "defense",
+                                                team_or_player = "player")
+  temp_defensive <- temp_defensive %>% filter(grepl("Premier League", Comp))
+  player_defensive_stats <- bind_rows(player_defensive_stats, temp_defensive)
+  Sys.sleep(2)
+  
+  # Collect possession statistics
+  cat("Collecting possession statistics...\n")
+  temp_possession <- fb_big5_advanced_season_stats(season_end_year = season_end_year,
+                                                 stat_type = "possession",
+                                                 team_or_player = "player")
+  temp_possession <- temp_possession %>% filter(grepl("Premier League", Comp))
+  player_possession_stats <- bind_rows(player_possession_stats, temp_possession)
+  
+  # Pause to avoid hitting API limits
+  Sys.sleep(5)
+  cat("Completed collecting data for", season, "\n\n")
+}
+```
+
+```{r}
+# 1.2 Collect team formation data
+team_formations <- fb_team_formations(country = "ENG", gender = "M", season_end_year = 2023, team_urls = NULL)
+
+# 1.3 Scrape Reddit for fan insights (from r/soccer and r/PremierLeague)
+reddit_threads <- get_reddit(subreddit = "PremierLeague", sort_by = "top", period = "year")
+soccer_threads <- get_reddit(subreddit = "soccer", sort_by = "top", period = "year", search_terms = "Premier League")
+
+# Collect content from top threads
+top_reddit_content <- data.frame()
+for (i in 1:min(20, nrow(reddit_threads))) {
+  thread_content <- get_thread_content(reddit_threads$url[i])
+  top_reddit_content <- bind_rows(top_reddit_content, thread_content$comments)
+}
+
+# 1.4 Save collected data
+save(player_standard_stats, player_shooting_stats, player_passing_stats,
+     player_defensive_stats, player_possession_stats, team_formations,
+     reddit_threads, soccer_threads, top_reddit_content,
+     file = "premier_league_data.RData")
+
+cat("Data collection complete. Data saved to 'premier_league_data.RData'.\n")
+```
